# query-gate

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  redact.yaml
.github/workflows/: ci.yml
app/: .thumbnail  QueryGate Demo.dc.html  QueryGate-UI-Spec.md  api.js  reduce.js
app/uploads/: 10-querygate.md
docs/: architecture.md  data-model.md  security-model.md
evals/: README.md  __init__.py  check_connector.py  questions.jsonl  run_eval.py  scoring.py
querygate/: __init__.py  __main__.py  audit.py  cli.py  config.py  db.py  guard.py  models.py  prompts.py  result.py  server.py  tools.py
querygate/api/: __init__.py  agent.py  eval_summary.py  mapping.py  redact_demo.yaml  server.py
scripts/: README.md  docker-init-role.sh  init_role.sql  schema.sql  seed.py
tests/: conftest.py  test_api_adapter.py  test_audit.py  test_boundary.py  test_cli.py  test_config.py  test_connector.py  test_db.py  test_eval_scoring.py  test_explain.py  test_guard.py  test_http_transport.py  test_redaction_demo.py  test_result.py  test_seed_and_role.py  test_serializer.py  test_server.py  test_tools.py  test_web_wiring.py
tests/fixtures/web/: overdue.json  refusal.json  render_baseline.js  search.json  search_redact.json
