[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "querygate"
version = "0.1.0"
description = "QueryGate — a read-only MCP server that answers questions over Postgres without ever being able to write."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shamim Ahamed" }]
dependencies = [
    # Pinned exactly: Faker's output drifts across versions even with a fixed seed,
    # which would silently shift the synthetic data the eval's frozen numbers depend on.
    "faker==30.8.2",
    # Postgres driver used by the seed loader and (in later splits) the server.
    "psycopg[binary]==3.2.3",
    # SQL parser for the Layer-1 guard (whole-AST walk, dialect=postgres). Pinned because
    # parser behaviour (node classes, Command fallbacks) can drift between versions and the
    # guard's security decisions depend on it.
    "sqlglot==25.34.0",
    # YAML parser for the optional redact.yaml column-redaction config (spec §8).
    "pyyaml==6.0.3",
    # Typed tool I/O contracts (RunResult / AuditLine); the mcp SDK derives the tool JSON
    # schema from these and the audit log round-trips through them (spec §7).
    # Bumped from 2.10.4 → 2.13.4 in Split 06: the mcp SDK requires pydantic>=2.11. The models
    # are simple/stable and the full pre-existing suite stays green on the bump (see PROGRESS.md).
    "pydantic==2.13.4",
    # The official MCP SDK — FastMCP app, @mcp.tool(), instructions=, stdio + Streamable-HTTP.
    # This is what QueryGate *is*: the server half of "MCP" (Appendix A). Pinned because the
    # published tool schema and the transport behaviour are part of the product contract.
    "mcp==1.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]

[project.scripts]
# The CLI dispatch (spec §15): bare `querygate` = the stdio MCP server (default); `seed` / `query` /
# `eval` subcommands + the `--http` flag route through `querygate.cli:main`. `uv run querygate` /
# `python -m querygate` both resolve here.
querygate = "querygate.cli:main"

[tool.setuptools]
packages = ["querygate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
