[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "querygate"
version = "0.1.0"
description = "QueryGate — a read-only MCP server that answers questions over Postgres without ever being able to write."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shamim Ahamed" }]
dependencies = [
    # Pinned exactly: Faker's output drifts across versions even with a fixed seed,
    # which would silently shift the synthetic data the eval's frozen numbers depend on.
    "faker==30.8.2",
    # Postgres driver used by the seed loader and (in later splits) the server.
    "psycopg[binary]==3.2.3",
    # SQL parser for the Layer-1 guard (whole-AST walk, dialect=postgres). Pinned because
    # parser behaviour (node classes, Command fallbacks) can drift between versions and the
    # guard's security decisions depend on it.
    "sqlglot==25.34.0",
    # YAML parser for the optional redact.yaml column-redaction config (spec §8).
    "pyyaml==6.0.3",
    # Typed tool I/O contracts (RunResult / AuditLine); the mcp SDK derives the tool JSON
    # schema from these and the audit log round-trips through them (spec §7).
    # Bumped from 2.10.4 → 2.13.4 in Split 06: the mcp SDK requires pydantic>=2.11. The models
    # are simple/stable and the full pre-existing suite stays green on the bump (see PROGRESS.md).
    "pydantic==2.13.4",
    # The official MCP SDK — FastMCP app, @mcp.tool(), instructions=, stdio + Streamable-HTTP.
    # This is what QueryGate *is*: the server half of "MCP" (Appendix A). Pinned because the
    # published tool schema and the transport behaviour are part of the product contract.
    "mcp==1.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]
# The grounding eval (Split 09) drives the agent-under-test via the OpenAI SDK (Azure GPT-5.5 for
# this project — the repo has no Anthropic key). Kept optional: Tier-1 + the scorer unit tests need
# neither a key nor this dependency; only the live `querygate eval` run does.
eval = [
    "openai>=1.55",
    "python-dotenv>=1.0",
]
# The Streamable-HTTP MCP **connector** check (Split 10) drives the running `--http` server through
# the Anthropic Messages API connector (`betas=["mcp-client-2025-11-20"]`). Optional + on-demand:
# the keyless HTTP transport tests (H-1..H-4) need none of this; only the keyed H-5..H-7 do, and they
# need an `ANTHROPIC_API_KEY` this repo does not ship (see PROGRESS.md). httpx ships with `mcp`.
connector = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]
# The web demo adapter (Split 11): `querygate web` serves the static `app/` UI + the `/api/*`
# streaming adapter. Starlette + uvicorn already ship transitively with `mcp` (the Streamable-HTTP
# transport uses them); pinned loosely here so a fresh install of this extra is self-contained. The
# live `/api/ask` loop additionally needs the `eval` extra (the OpenAI/Azure client + the gold set).
web = [
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.scripts]
# The CLI dispatch (spec §15): bare `querygate` = the stdio MCP server (default); `seed` / `query` /
# `eval` subcommands + the `--http` flag route through `querygate.cli:main`. `uv run querygate` /
# `python -m querygate` both resolve here.
querygate = "querygate.cli:main"

[tool.setuptools]
packages = ["querygate", "querygate.api"]

[tool.setuptools.package-data]
# The web demo's redaction toggle config (Split 11) ships with the package.
"querygate.api" = ["redact_demo.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so the scorer tests can `import evals.scoring` (the `evals/`
# tree is run/tested in-place, not installed as a package).
pythonpath = ["."]
